# UJ_Advanced_CPP

./: .clang-format  CMakeLists.txt  setup.bash
Ex1/: CMakeLists.txt
Ex1/include/: templates.hpp
Ex1/src/: main.cpp
Ex10/: CMakeLists.txt
Ex10/src/: main.cpp
Ex2/: CMakeLists.txt  definitions.md
Ex2/include/: accumulate.hpp  polymorphism.hpp  sequence_gen.hpp
Ex2/src/: main.cpp
Ex3/: CMakeLists.txt
Ex3/include/: convert.hpp  max.hpp  set.hpp  stack.hpp  stl_stack.hpp
Ex3/src/: main.cpp
Ex4/: CMakeLists.txt
Ex4/include/: categories.hpp  def_vals.hpp  sum_iters.hpp  sum_traits.hpp  total.hpp
Ex4/src/: main.cpp
Ex5/: CMakeLists.txt
Ex5/include/: has_value_type.h  is_class.h  is_convertible.h  strip.h
Ex5/src/: main.cpp
Ex6/: CMakeLists.txt
Ex6/include/Ex6_1/: checking_policy.h  col_fact.h  color.h
Ex6/include/Ex6_2/: stack.h
Ex6/include/Ex6_3/: allocator.h  checking_policy.h  stack.h
Ex6/include/Ex6_4/: allocator.h  checking_policy.h  stack.h
Ex6/src/: main.cpp  main2.cpp  main3.cpp  main4.cpp
Ex7/: CMakeLists.txt
Ex7/include/: factorial.h  faster_pow.h  pow.h  sin.h  vectors.h
Ex7/src/: main.cpp
Ex9/: CMakeLists.txt
Ex9/include/: smart_ptrs.h  song_factory.h  weak_ptr.h
Ex9/src/: main.cpp
