cmake_minimum_required(VERSION 3.5)

project(CPP_OOP)

set(CMAKE_CXX_FLAGS "-Wall")
set(CMAKE_C_COMPILER "gcc")
set(CMAKE_CXX_COMPILER "g++")
set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)

add_subdirectory(Ex1)
add_subdirectory(Ex2)
add_subdirectory(Ex3)
add_subdirectory(Ex4)
add_subdirectory(Ex5)
add_subdirectory(Ex6)
add_subdirectory(Ex7)
